--- a/frontend/assets/style/main_Yera.css
+++ b/frontend/assets/style/main_Yera.css
@@ -55,35 +55,65 @@
     font-size: 18px;
     padding: 1px 7px;
 }
-.main-page-content-wrapper {
+.page-content-wrapper {
     display: flex;
     justify-content: space-around;
     padding-bottom: 10px;
 }
-.main-page-text {
+.page-text {
     margin-top: 0;
     margin-bottom: 50px;
     padding-left: 40px;
     padding-bottom: 22.5px;
     background-color: #FFC244FF;
 }
-.main-page-circle-icon {
+.page-circle-icon {
     width: 180px;
 
 }
-.main-page-circle-link {
+.page-link {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #00A082FF;
-    width: 22%;
-    aspect-ratio: 1 / 1;
-    border-radius: 100%;
+    text-decoration: none;
     box-shadow: 0px 0px 50px 1px #797979;
     transition: .2s ease-in-out;
 }
-.main-page-circle-link:hover {
+.circle-link {
+    background-color: #00A082FF;
+    border-radius: 100%;
+    width: 22%;
+    aspect-ratio: 1 / 1;
+}
+.rectangle-link {
+    width: 25%;
+    aspect-ratio: 1 / 0.6;
+    color: #FFFFFF;
+    font-weight: 600;
+    font-size: 25px;
+}
+.rectangle-link-background {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+.page-rectangle-text{
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+}
+.rectangle-link:hover {
+    transform: scale(1.05);
+}
+.circle-link:hover {
     background-color: #00846BFF;
     transform: scale(1.05);
+}
+.page-circle-text {
+    padding-top: 20px;
+    color: #FFC244FF;
+    font-size: 25px;
 }
