Added icon to Page 2 & Page 3

--- a/frontend/assets/style/main_Yera.css
+++ b/frontend/assets/style/main_Yera.css
@@ -92,6 +92,7 @@
     color: #FFFFFF;
     font-weight: 600;
     font-size: 25px;
+    border-radius: 10px;
 }
 .rectangle-link-background {
     display: flex;
@@ -101,6 +102,7 @@
     height: 100%;
     background-size: contain;
     background-repeat: no-repeat;
+    border-radius: 10px;
 }
 .page-rectangle-text{
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
