--- a/frontend/assets/style/main_Aru.css
+++ b/frontend/assets/style/main_Aru.css
@@ -1,33 +1,199 @@
+/* 7.html */
+.heading-wrapper{
+    padding-left: 60px;
+}
 .button-edit{
+    display: inline-block;
+    border: 1px solid gray;
+    width: 25px;
+    height: 25px;
+    background-color: rgb(247, 245, 245);
+    border-radius: 15px;
+}
+.edit{
+    display: inline-block;
+}
+.edit p, .edit button{
     display: inline-block;
     width: 25px;
     height: 25px;
 }
-.edit button{
-    border: 1px solid gray;
-    border-radius: 15px;
+.button-delete{
+    background-color: rgb(159, 221, 210);
+    /* border: 1px solid gray; */
+    border: none;
+    width: 30px;
+    height: 30px;
+    border-radius: 5px;
+    /* position: absolute; */
+    /* display: inline-block;   */
+    margin-left: 10px;
+    float: right;
 }
+.button-delete:hover{
+    background-color: rgb(132, 172, 165);
+    transform: scale(1.2);
+}
+.button-edit:hover{
+    cursor: pointer;
+    background-color: gray;
+}
+
 .cart_block{
+    /* position: relative; */
     width: 80%;
     height: 30%;
-    background-color: antiquewhite;
+    background-color: #e9f8f5;
     border: 1px solid antiquewhite;
     border-radius: 10px;
     margin: 20px;
     padding: 20px;
 }
+.cart_block:hover{
+    background-color: rgb(214, 229, 226);
+}
 .button-order{
     border: 1px solid black;
-    background-color: rgb(97, 194, 71);
+    background-color:rgb(0, 160, 130);
+    color:white;
     border-radius: 5px;
     margin: 10px;
     padding: 10px;
     width: 20%;
     margin-left: 60px;
     font-size: 1.2em;
+    border: none;
+}
+.button-order:hover{
+    background-color: rgb(0, 132, 107);
 }
 .header{
 background-color: rgb(198, 198, 44);
 margin: 0;
 height: 70px;
+}
+
+.button-delete:hover{
+    cursor: pointer;
+}
+.cart-image{
+    width: 200px;
+
+}
+.cart-image:hover{
+    cursor: pointer;
+    transform: scale(2);
+}
+/* 8.html */
+.form-block-wrapper{
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    /* justify-content: center;
+    align-items: center; */
+}
+
+.form-block{
+    border: none;
+    width: 60%;
+    height: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    grid-row: 1/7;
+    
+}
+.form-block-content{
+    display: grid;
+    grid-template-rows: repeat(6,1fr);
+    margin:10px 0px 0px -50px;
+    font-size: 1.2em;
+}
+.input-item2{
+    width: 200%;
+}
+
+.button-confirm{
+width: 80%;
+border:none;
+border-radius: 15px;
+height: 50px;
+background-color: rgb(0, 160, 130);
+color:white;
+font-size: 25px;
+margin: 0px 0px 10px 30px;
+}
+.button-confirm:hover{
+    background-color: rgb(0, 132, 107);
+    cursor: pointer;
+}
+.summary-product-block{
+    display: inline-block;
+    padding: 0px 10px;
+}
+.summary-block{
+    box-shadow: 0px 0px 10px 2px #797979;
+}
+/* 9.html */
+.block-survey-wrapper{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.survey-block{
+    width: 50%; 
+    height: 100%;
+    border: none;
+    box-shadow: 0px 0px 20px 10px #797979;
+    padding:10px 20px;
+    background-color:  white;
+
+}
+.button-submit-survey{
+    width: 20%;
+    border:none;
+    border-radius: 15px;
+    height: 40px;
+    background-color: rgb(0, 160, 130);
+    color:white;
+    font-size: 25px;
+    margin: 10px 0px;
+}
+.button-submit-survey:hover{
+    background-color: rgb(0, 132, 107);
+    cursor: pointer;
+}
+#body-survey{
+    background-image: url("http://untitledmag.fr/wp-content/uploads/2018/01/glovo_coursier.jpg");
+    background-size: 100%;
+    background-attachment: fixed;
+
+}
+/* 10.html */
+.block-qa{
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    padding: 50px 100px;
+}
+.block-chapters-content{
+    display: inline-block;
+
+}
+.block-chapters{
+    display: inline-block;
+}
+.block-chapters a{
+    color: rgb(0, 160, 130);
+    text-decoration: none;
+    
+}
+.block-chapter h1{
+    font-size: 2.5em ;
+}
+.block-chapter h2{
+    color: rgb(255, 194, 68);
 }
