--- a/frontend/assets/style/main_Aru.css
+++ b/frontend/assets/style/main_Aru.css
@@ -178,6 +178,8 @@ margin: 0px 0px 10px 30px;
     display: grid;
     grid-template-columns: 1fr 2fr;
     padding: 50px 100px;
+    font-family: "Gotham","Arial","Helvetica Neue",Helvetica,sans-serif;
+    line-height:1.5em;
 }
 .block-chapters-content{
     display: inline-block;
@@ -193,6 +195,7 @@ margin: 0px 0px 10px 30px;
 }
 .block-chapter h1{
     font-size: 2.5em ;
+    line-height: 2em;
 }
 .block-chapter h2{
     color: rgb(255, 194, 68);
