--- a/frontend/assets/style/main_Aru.css
+++ b/frontend/assets/style/main_Aru.css
@@ -135,7 +135,11 @@ margin: 0px 0px 10px 30px;
 }
 .summary-block{
     box-shadow: 0px 0px 10px 2px #797979;
-    margin:5px 10px;
+    border-radius: 10px;
+    margin:10px 10px;
+}
+.summary-block img{
+    border-top-right-radius: 10px;
 }
 /* 9.html */
 .block-survey-wrapper{
