--- a/frontend/assets/style/main_Yera.css
+++ b/frontend/assets/style/main_Yera.css
@@ -61,10 +61,11 @@
     padding-bottom: 10px;
 }
 .page-text {
+    text-align: center;
     margin-top: 0;
     margin-bottom: 50px;
     padding-left: 40px;
-    padding: 11.25px 5%;
+    padding: 2% 0;
 }
 .page-circle-icon {
     width: 180px;
