--- a/frontend/assets/style/main_Aru.css
+++ b/frontend/assets/style/main_Aru.css
@@ -82,7 +82,7 @@ height: 70px;
 }
 .cart-image:hover{
     cursor: pointer;
-    transform: scale(2);
+    transform: scale(1.2);
 }
 /* 8.html */
 .form-block-wrapper{
@@ -123,7 +123,7 @@ height: 50px;
 background-color: rgb(0, 160, 130);
 color:white;
 font-size: 25px;
-margin: 0px 0px 10px 30px;
+margin: 0px 10px 10px 30px;
 }
 .button-confirm:hover{
     background-color: rgb(0, 132, 107);
@@ -131,7 +131,7 @@ margin: 0px 0px 10px 30px;
 }
 .summary-product-block{
     display: inline-block;
-    padding: 0px 10px;
+    padding: 0 10px;
 }
 .summary-block{
     box-shadow: 0px 0px 10px 2px #797979;
@@ -196,11 +196,11 @@ margin: 0px 0px 10px 30px;
 .block-chapters a{
     color: rgb(0, 160, 130);
     text-decoration: none;
-    
 }
 .block-chapter h1{
     font-size: 2.5em ;
     line-height: 2em;
+    margin-top: 1px;
 }
 .block-chapter h2{
     color: rgb(255, 194, 68);
