--- a/frontend/assets/style/main_Aru.css
+++ b/frontend/assets/style/main_Aru.css
@@ -2,6 +2,9 @@
 .heading-wrapper{
     padding-left: 60px;
 }
+li {
+    list-style-type: none;
+}
 .button-edit{
     display: inline-block;
     border: 1px solid gray;
@@ -57,10 +60,9 @@
     background-color:rgb(0, 160, 130);
     color:white;
     border-radius: 5px;
-    margin: 10px;
+    margin-bottom: 10px;
     padding: 10px;
     width: 20%;
-    margin-left: 60px;
     font-size: 1.2em;
     border: none;
 }
@@ -81,7 +83,6 @@ height: 70px;
 
 }
 .cart-image:hover{
-    cursor: pointer;
     transform: scale(1.2);
 }
 /* 8.html */
@@ -93,7 +94,10 @@ height: 70px;
     /* justify-content: center;
     align-items: center; */
 }
-
+.form-order {
+    display: flex;
+    justify-content: center;
+}
 .form-block{
     border: none;
     width: 60%;
@@ -136,7 +140,7 @@ margin: 0px 10px 10px 30px;
 .summary-block{
     box-shadow: 0px 0px 10px 2px #797979;
     border-radius: 10px;
-    margin:10px 10px;
+    padding: 0 10px;
 }
 .summary-block img{
     border-top-right-radius: 10px;
