--- a/frontend/assets/style/main_Binaz.css
+++ b/frontend/assets/style/main_Binaz.css
@@ -17,7 +17,7 @@
 
 .box{
     position: relative;
-    margin: 4rem 6rem;
+    margin: 4rem;
     height: auto;
     display: flex;
     flex-direction: column;
@@ -36,6 +36,7 @@
 }
 .box h2{
     font-size: 1.2rem;
+    justify-content: center;
 
 }
 .box span{
